# SentimentAnalysisWithHuggingFaceProject

./: LICENSE.txt  README.md  main.py  pyproject.toml
data/: Dropbox.csv
