[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingface-sentiment-analysis"
version = "1.0.0"
description = "An example of sentiment analysis using Hugging Face instead of LLMs"
readme="README.md"
authors = [
    {name = "David Mickelson", email = "davidpmickelson@gmail.com"}
]
license = {text = "MIT"}

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/example/example-project"

[project.dependencies]
# Add your project dependencies here
pandas = "^2.0"
numpy = "^1.24"
requests = "^2.28"
torch = "^1.13"
transformers = "^4.27"

[tool.setuptools]
# Add any setuptools-specific configurations here

[tool.setuptools.package_data]
"huggingface-sentiment-analysis" = ["data/Dropbox.csv"]

[tool.setuptools.extras_require]
dev = ["pytest"]
